Fix z-index of comment box in detail page

--- a/catalog/view/theme/default/stylesheet/post-detail.css
+++ b/catalog/view/theme/default/stylesheet/post-detail.css
@@ -50,7 +50,7 @@
     width: 345px;
     overflow: hidden;
     border-left: 3px solid #ccc;
-    z-index: 10;
+    z-index: 2;
 }
 #detail-scroll {
     position: absolute;
